--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,9 @@ en:
     label:
       patient:
         paediatric_patient_indicator: "If under 18 years, is the recipient being treated in a paediatric unit?"
+
+en:
+  activerecord:
+    attributes:
+      patient_event_type:
+        name: New Patient Event Type
