Removed custom validation error messages from medication model and placed in config/locales/en.yml.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,12 @@ en:
     attributes:
       event_type:
         name: Name
+      peritonitis_episode/medications:
+        medicatable_id: Medication to be administered
+        dose: Medication's dose
+        medication_route_id: Medication's route
+        frequency: "Medication's frequency & duration"
+        start_date: "Medication's prescribed on"
+        provider: Medication's provider
+
 
