--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,10 +47,11 @@ en:
         provider: Medication's provider
       pd_regime:
         treatment: PD regime treatment
+        pd_regime_bags: PD regime
       pd_regime/pd_regime_bags:
         bag_type_id: PD bag type
-        volume: "PD regime volume (ml)"
-        days: PD regime bag
+        volume: "PD bag volume (ml)"
+        days: PD bag
 
 
 
