Second pass at the form

--- a/config/locales/renalware/transplants/recipient_workup.yml
+++ b/config/locales/renalware/transplants/recipient_workup.yml
@@ -1,40 +1,69 @@
 # https://github.com/plataformatec/simple_form#i18n
 
 en:
-  activerecord:
-    attributes:
-      renalware/transplants/recipient_workup:
-        performed_at: Performed On
+  # activerecord:
+  #   attributes:
+  #     renalware/transplants/recipient_workup:
+  #       performed_at: Performed On
   activemodel:
     attributes:
       renalware/transplants/recipient_workup_document:
-        hx_tb: History of TB?
+        amputation_for_pvd: Amputation for PVD?
+        angina: Angina?
+        bruits: Bruits
+        cervical_date: Cervical smear date
+        cervical_result: Cervical smear result
+        chronic_obstr_pulm_dis: COPD?
+        claudication: Claudication?
+        coronary_artery_bypass_graft: CABG?
+        cvd_or_stroke: CVD or stroke?
+        diabetes: Diabetes?
+        dorsalis_pedis_pulse_l: Dorsalis pedis pulse (left)
+        dorsalis_pedis_pulse_r: Dorsalis pedis pulse (right)
+        femoral_pulse_l: Femoral pulse (left)?
+        femoral_pulse_r: Femoral pulse (right)?
+        heart_failure: Heart Failure?
+        heart_sounds: Heart Sounds
         hx_dvt: History of DVT?
-        hx_reflux: History of reflux?
+        hx_family_diabetes: Family history of diabetes?
         hx_neurogenic_bladder: History of neurogenic bladder?
         hx_recurrent_utis: History of UTIs?
-        hx_family_diabetes: Family history of diabetes?
-        pregnancies_no: Number of pregnancies
-        cervical_result: Cervical smear result
-        cervical_date: Cervical smear date
-        femoral_pulse_r: Femoral pulse (right)?
-        femoral_pulse_l: Femoral pulse (left)?
-        dorsalis_pedis_pulse_r: Dorsalis pedis pulse (right)
-        dorsalis_pedis_pulse_l: Dorsalis pedis pulse (left)
-        posterior_tibial_pulse_r: Posterior tibial pulse (right)
+        hx_reflux: History of reflux?
+        hx_tb: History of TB?
+        ischaemic_neuropathic_ulcers: Ischaemic/Neuropathic Ulcers?
+        karnofsky_score: Karnofsky Score
+        liver_disease: Liver disease?
+        malignancy: Cancer or malignancy?
+        myocardial_infarct: Myocardial Infarct?
+        non_coronary_angioplasty: Angioplasty, vascular graft, aneurysm, stent (non-coronary)?
         posterior_tibial_pulse_l: Posterior tibial pulse (left)
-        bruits: Bruits
-        heart_sounds: Heart Sounds
+        posterior_tibial_pulse_r: Posterior tibial pulse (right)
+        pregnancies_count: Number of pregnancies
+        prisma_score: Frailty (Prisma) score
+        smoking: Smoker?
         tx_consent: Tx consent?
         tx_consent_date: Tx consent date
         tx_consent_marginal: Tx marginal consent?
         tx_consent_marginal_date: Tx marginal consent date
-  # simple_form:
-  #   hints:
-  #     transplants_recipient_workup:
-  #       performed_at: The date and time the workup was completed
-  #       document:
-  #         cervical_date: Just a date
+        carotid_bruit_l: Carotid Bruit (left)
+        carotid_bruit_r: Carotid Bruit (right)
+        femoral_bruit_l: Femoral Bruit (left)
+        femoral_bruit_r: Femoral Bruit (right)
+        hla_data: HLA Data
+    errors:
+      models:
+        renalware/transplants/recipient_workup_document:
+          attributes:
+            karnofsky_score:
+              inclusion: must be between 0 and 100
+            prisma_score:
+              inclusion: must be between 0 and 7
+
+  simple_form:
+    hints:
+      transplants_recipient_workup:
+        document:
+          cervical_date: The date Rober Rabbit was introduced
   #   placeholders:
   #     transplants_recipient_workup:
   #       document:
