Change sample simple form hint example
Roger Rabbit unlikely to have had a cervical smear :)

--- a/config/locales/renalware/transplants/recipient_workup.yml
+++ b/config/locales/renalware/transplants/recipient_workup.yml
@@ -63,7 +63,7 @@ en:
     hints:
       transplants_recipient_workup:
         document:
-          cervical_date: The date Rober Rabbit was introduced
+          smoking: Includes former as well as current smokers
   #   placeholders:
   #     transplants_recipient_workup:
   #       document:
