Add comorbidity date entry hint
partly as test/demo of hints... very cool

--- a/config/locales/renalware/transplants/recipient_workup.yml
+++ b/config/locales/renalware/transplants/recipient_workup.yml
@@ -74,6 +74,7 @@ en:
     hints:
       transplants_recipient_workup:
         document:
+          angina: For comorbidities enter date diagnosed at right if YES
           smoking: Includes former as well as current smokers
   #   placeholders:
   #     transplants_recipient_workup:
