--- a/config/locales/renalware/transplants/recipient_workup.yml
+++ b/config/locales/renalware/transplants/recipient_workup.yml
@@ -8,61 +8,62 @@ en:
   activemodel:
     attributes:
       renalware/transplants/recipient_workup_document:
-        amputation_for_pvd: Amputation for PVD?
+        hla_data: HLA Data
+      renalware/transplants/recipient_workup_document/comorbidities:
         angina: Angina?
-        bruits: Bruits
-        cervical_date: Cervical smear date
-        cervical_result: Cervical smear result
+        amputation_for_pvd: Amputation for PVD?
         chronic_obstr_pulm_dis: COPD?
         claudication: Claudication?
         coronary_artery_bypass_graft: CABG?
         cvd_or_stroke: CVD or stroke?
         diabetes: Diabetes?
-        dorsalis_pedis_pulse_l: Dorsalis pedis pulse (left)
-        dorsalis_pedis_pulse_r: Dorsalis pedis pulse (right)
-        femoral_pulse_l: Femoral pulse (left)?
-        femoral_pulse_r: Femoral pulse (right)?
-        heart_failure: Heart Failure?
-        heart_sounds: Heart Sounds
-        hx_dvt: History of DVT?
-        hx_family_diabetes: Family history of diabetes?
-        hx_neurogenic_bladder: History of neurogenic bladder?
-        hx_recurrent_utis: History of UTIs?
-        hx_reflux: History of reflux?
-        hx_tb: History of TB?
         ischaemic_neuropathic_ulcers: Ischaemic/Neuropathic Ulcers?
-        karnofsky_score: Karnofsky Score
         liver_disease: Liver disease?
         malignancy: Cancer or malignancy?
         myocardial_infarct: Myocardial Infarct?
         non_coronary_angioplasty: Angioplasty, vascular graft, aneurysm, stent (non-coronary)?
-        posterior_tibial_pulse_l: Posterior tibial pulse (left)
-        posterior_tibial_pulse_r: Posterior tibial pulse (right)
-        pregnancies_count: Number of pregnancies
-        prisma_score: Frailty (Prisma) score
         smoking: Smoker?
-        tx_consent: Consent
-        tx_consent_date: Consent Date
-        tx_consenting_name: Who consented
-        tx_marginal_consent: Marginal consent?
-        tx_marginal_consent_date: Marginal Consent Date
-        tx_marginal_consenting_name: Who marginally consented
-        carotid_bruit_l: Carotid Bruit (left)
-        carotid_bruit_r: Carotid Bruit (right)
-        femoral_bruit_l: Femoral Bruit (left)
-        femoral_bruit_r: Femoral Bruit (right)
-        hla_data: HLA Data
-        educ_waiting_list: Waiting List
-        educ_transport_benefits: Transport/Benefits
-        educ_procedure: Transplant Procedure
-        educ_infection: Infection Risks
-        educ_rejection: Rejection Risks
-        educ_success_rate: Success Rate
-        educ_drugs_shortterm: Drugs (Short term)
-        educ_drugs_longterm: Drugs (Long term)
-        educ_cancer: Cancer Risks
-        educ_followup: Follow-Up
-        educ_recurrence: Recurrence Risks
+      renalware/transplants/recipient_workup_document/historicals:
+        dvt: History of DVT?
+        family_diabetes: Family history of diabetes?
+        neurogenic_bladder: History of neurogenic bladder?
+        recurrent_utis: History of UTIs?
+        reflux: History of reflux?
+        tb: History of TB?
+        pregnancies_count: Number of pregnancies
+      renalware/transplants/recipient_workup_document/scores:
+        karnofsky: Karnofsky Score
+        prisma: Frailty (Prisma) score
+      renalware/transplants/recipient_workup_document/cervical_smear:
+        date: Cervical smear date
+        result: Cervical smear result
+      renalware/transplants/recipient_workup_document/examination:
+        femoral_pulse: Femoral pulse?
+        dorsalis_pedis_pulse: Dorsalis pedis pulse?
+        posterior_tibial_pulse: Posterior tibial pulse?
+        carotid_bruit: Carotid Bruit?
+        femoral_bruit: Femoral Bruit?
+        heart_failure: Heart Failure?
+        heart_sounds: Heart Sounds
+      renalware/transplants/recipient_workup_document/transplant_consents:
+        consent: Transplant Consent
+        consent_date: Consent Date
+        consenting_name: Who consented
+        marginal_consent: Marginal consent?
+        marginal_consent_date: Marginal Consent Date
+        marginal_consenting_name: Who marginally consented
+      renalware/transplants/recipient_workup_document/education:
+        waiting_list: Waiting List
+        transport_benefits: Transport/Benefits
+        procedure: Transplant Procedure
+        infection: Infection Risks
+        rejection: Rejection Risks
+        success_rate: Success Rate
+        drugs_shortterm: Drugs (Short term)
+        drugs_longterm: Drugs (Long term)
+        cancer: Cancer Risks
+        followup: Follow-Up
+        recurrence: Recurrence Risks
     errors:
       models:
         renalware/transplants/recipient_workup_document:
@@ -72,19 +73,19 @@ en:
             prisma_score:
               inclusion: must be between 0 and 7
   enumerize:
-    renalware/transplants/recipient_workup_document:
-      tx_consent:
+    renalware/transplants/recipient_workup_document/transplant_consents:
+      consent:
         full: Full
         partial: Partial
-        refused: Refused
+        refused: Refused transplant
   simple_form:
     hints:
       transplants_recipient_workup:
         document:
-          angina: For comorbidities enter date diagnosed at right if YES
-          smoking: Includes former as well as current smokers
-          tx_consenting_name: Your name or the person who consented
-  #   placeholders:
-  #     transplants_recipient_workup:
-  #       document:
-  #         pregnancies_no: "0"
+          comorbidities:
+            angina:
+              status: For comorbidities enter date diagnosed at right if YES
+            smoking:
+              status: Includes former as well as current smokers
+          transplant_consents:
+            consenting_name: Your name or the person who consented
