--- a/config/locales/en-GB.yml
+++ b/config/locales/en-GB.yml
@@ -194,7 +194,7 @@ en-GB:
   time:
     am: am
     formats:
-      default: "%a, %d %b %Y %H:%M:%S %z"
+      default: "%d-%m-%Y %H:%M"
       long: "%d %B, %Y %H:%M"
       short: "%d %b %H:%M"
     pm: pm
