--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -12,11 +12,6 @@ en:
         transplant_site: Transplant Site
         cold_ischaemic_time: Cold Ischaemic Time
         notes: Notes
-        transplant_failed: Transplant failed?
-        failed_on: Failure Date
-        failure_cause: Failure Cause
-        failure_description: Failure Description
-        stent_removed_on: Stent Removal Date
   activemodel:
     attributes:
       renalware/transplants/recipient_operation_document/kidney:
@@ -48,6 +43,12 @@ en:
         tested_on: Test Date
         results: Results
         notes: Notes
+      renalware/transplants/recipient_operation_document/outcome:
+        transplant_failed: Transplant failed?
+        failed_on: Failure Date
+        failure_cause: Failure Cause
+        failure_description: Failure Description
+        stent_removed_on: Stent Removal Date
 
   enumerize:
     renalware/transplants/recipient_operation:
