--- a/config/locales/renalware/transplants/registration.yml
+++ b/config/locales/renalware/transplants/registration.yml
@@ -55,3 +55,7 @@ en:
         document:
           hla:
             type: Freetext entry (not parsed)
+      clinic_visit:
+        height: metres
+        weight: kg.
+
