Moved clinic visits hints out of transplants/registration.yml to clinic/visits.yml

--- a/config/locales/renalware/clinics/visit.yml
+++ b/config/locales/renalware/clinics/visit.yml
@@ -3,3 +3,9 @@ en:
     clinic_visits:
       form:
         clinic_type_prompt: Select clinic type
+
+  simple_form:
+    hints:
+      clinic_visit:
+        height: metres
+        weight: kg.
