Updated associated attributes within clinic_visits and related tests with renamed clinic_type to clinic.

--- a/config/locales/renalware/clinics/visit.yml
+++ b/config/locales/renalware/clinics/visit.yml
@@ -2,7 +2,7 @@ en:
   renalware:
     clinic_visits:
       form:
-        clinic_type_prompt: Select clinic type
+        clinic_prompt: Select clinic type
 
   simple_form:
     hints:
