--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -28,13 +28,22 @@ en:
       renalware/transplants/recipient_operation_document/donor:
         age: Age
         blood_group: Blood Group
+        blood_group_rhesus: Blood Group Rhesus
         born_on: Birthdate
-        cause_of_death: Cause Of Death
         cmv_status: CMV Status
+        ethnic_category: Ethnic Category
         gender: Gender
         hla: HLA
         hla_mismatch: HLA Mismatch
+        organ_donor_register_checked: Organ Donor Register Checked
         type: Donor Type
+        ukt_donor_number: UKT Donor Number
+        ukt_notified_at: Date/time notified to UKT
+      renalware/transplants/recipient_operation_document/cadaveric_donor:
+        cadaveric_donor_type: Cadaveric Donor Type
+        death_certified_at: Date and Time of Certification of Death
+        ukt_cause_of_death: UKT Donor's Cause of Death
+        warm_ischaemic_time_in_minutes: Total Warm Ischaemic Time (in minutes)
       renalware/transplants/recipient_operation_document/dsa:
         notes: Notes
         results: Results
@@ -62,5 +71,48 @@ en:
       type:
         live_related: Live related
         cadaver: Cadaver
-        nhb: NHB
+        non_heart_beating: NHB
         live_unrelated: Live unrelated
+    renalware/transplants/recipient_operation_document/cadaveric_donor:
+      ukt_cause_of_death:
+        acute_blood_loss: "Acute blood loss/hypovolaemia"
+        alcohol_poisoning: "Alcohol poisoning"
+        aneurysm: "Aneurysm"
+        asthma: "Asthma"
+        brain_tumour: "Brain tumour"
+        cancer: "Cancer (other than brain tumour)"
+        carbon_monoxide_poisoning: "Carbon monoxide poisoning"
+        cardiac_arret: "Cardiac arrest"
+        cardiovascular_unclassified: "Cardiovascular - type unclassified"
+        chronic_pulmonary_disease: "Chronic pulmonary disease"
+        congestive_heart_failure: "Congestive heart failure"
+        hypoxic_brain_damage: "Hypoxic brain damage - all causes"
+        infections_unclassified: "Infections - type unclassified"
+        intracranial_haemorrhage: "Intracranial haemorrhage"
+        intracranial_thrombosis: "Intracranial thrombosis"
+        intracranial_unclassidied: "Intracranial - type unclassified (CVA)"
+        ischaemic_heart_disease: "Ischaemic heart disease"
+        liver_failure: "Liver failure (not self-poisoning)"
+        meningitis: "Meningitis"
+        multi_organ_failure: "Multi-organ failure"
+        noycardial_infarction: "Myocardial infarction"
+        other: "Other, please specify"
+        other_drug_overdose: "Other drug overdose, please specify"
+        other_trauma_accident: "Other trauma - accident"
+        other_trauma_suicide: "Other trauma - known or suspected suicide"
+        other_trauma_unknown: "Other trauma - unknown cause"
+        paracetamol_overdose: "Paracetamol overdose"
+        pneumonia: "Pneumonia"
+        pulmonary_embolism: "Pulmonary embolism"
+        renal_failure: "Renal failure"
+        respiratory_failure: "Respiratory failure"
+        respiratory_unclassified: "Respiratory - type unclassified (inc smoke inhalation)"
+        self_poisoning_unclassified: "Self-poisoning - type unclassified"
+        septicaemia: "Septicaemia"
+        sudden_infant_death_syndrome: "Sudden Infant Death Syndrome (SIDS)"
+        trauma_rta_car: "Trauma RTA - car"
+        trauma_rta_motorbike: "Trauma RTA - motorbike"
+        trauma_rta_pedestrian: "Trauma RTA - pedestrian"
+        trauma_rta_pushbike: "Trauma RTA - pushbike"
+        trauma_rta_unknown: "Trauma RTA - unknown type"
+        unknown: "Unknown"
