Add etchnic categories

--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -74,6 +74,43 @@ en:
         cadaver: Cadaver
         non_heart_beating: NHB
         live_unrelated: Live unrelated
+      ethnic_category:
+        white: "White"
+        black_caribbean: "Black Caribbean"
+        black_african: "Black African"
+        black_other_non_mixed_origin: "Black / other / non-mixed origin"
+        black_british: "Black British"
+        black_north_african: "Black North African"
+        black_other_african_country: "Black – other African country"
+        black_east_african_asian: "Black East African Asian"
+        black_indian_sub_continent: "Black Indian sub-continent"
+        black_other_asian: "Black – other Asian"
+        black_black_other: "Black Black - other"
+        black_other_mixed: "Black – other / mixed"
+        other_black_black_white_orig: "Other Black - Black/White orig"
+        other_black_black_asian_orig: "Other Black - Black/Asian orig"
+        indian: "Indian"
+        pakistani: "Pakistani"
+        bangladeshi: "Bangladeshi"
+        chinese: "Chinese"
+        other_ethnic_non_mixed: "Other ethnic non-mixed (NMO)"
+        brit_ethnic_minor_spec: "Brit. ethnic minor. spec.(NMO)"
+        caribbean_island: "Caribbean Island (NMO)"
+        north_african_arab: "North African Arab (NMO)"
+        other_african_countries: "Other African countries (NMO)"
+        east_african_asian: "East African Asian (NMO)"
+        indian_sub_continent: "Indian sub-continent (NMO)"
+        other_asian: "Other Asian (NMO)"
+        irish: "Irish (NMO)"
+        greek_cypriot: "Greek Cypriot (NMO)"
+        turkish_cypriot: "Turkish Cypriot (NMO)"
+        other_european: "Other European (NMO)"
+        other_ethnic_nec: "Other ethnic NEC (NMO)"
+        other_ethnic_mixed_origin: "Other ethnic / mixed origin"
+        other_ethnic_black_white_orig: "Other ethnic / Black/White orig"
+        other_ethnic_asian_white_orig: "Other ethnic / Asian/White orig"
+        other_ethnic_mixed_white_orig: "Other ethnic / mixed white orig"
+        other_ethnic_other_mixed_orig: "Other ethnic / other mixed orig"
     renalware/transplants/recipient_operation_document/cadaveric_donor:
       ukt_cause_of_death:
         acute_blood_loss: "Acute blood loss/hypovolaemia"
