Make weight an Integer and include unit in label

--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -18,7 +18,7 @@ en:
         age: Age
         asyst: Asystolic
         side: Side
-        weight: Weight
+        weight: Weight (g)
       renalware/transplants/recipient_operation_document/recipient:
         age:
         blood_group: Blood Group
