--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,9 +17,9 @@ en:
       renalware/event_type:
         name: Name
       renalware/peritonitis_episode/infection_organisms:
-        organism_code_id: Organism
+        organism_code: Organism
       renalware/exit_site_infection/infection_organisms:
-        organism_code_id: Organism
+        organism_code: Organism
       renalware/patient/medications:
         medicatable_id: Medication to be administered
         dose: Medication's dose
