Compute donor age when date of birth is provided in the recipient operation form

--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -152,3 +152,10 @@ en:
         trauma_rta_pushbike: "Trauma RTA - pushbike"
         trauma_rta_unknown: "Trauma RTA - unknown type"
         unknown: "Unknown"
+
+  simple_form:
+    hints:
+      transplants_recipient_operation:
+        document:
+          donor:
+            born_on: Age will be computed if you provide a date
