--- a/config/locales/renalware/transplants/donor_workup.yml
+++ b/config/locales/renalware/transplants/donor_workup.yml
@@ -15,7 +15,7 @@ en:
         angina: Angina?
         chronic_obstr_pulm_dis: COPD?
         claudication: Claudication?
-        coronary_artery_bypass_graft: CABG?
+        coronary_artery_bypass_graft: CABG or Coronary Angioplasty?
         cvd_or_stroke: CVD or stroke?
         diabetes: Diabetes?
         ischaemic_neuropathic_ulcers: Ischaemic/Neuropathic Ulcers?
