--- a/config/locales/renalware/transplants/donor_workup.yml
+++ b/config/locales/renalware/transplants/donor_workup.yml
@@ -95,7 +95,7 @@ en:
         document:
           comorbidities:
             angina:
-              status: For comorbidities enter date diagnosed at right if YES
+              status: For comorbidities enter year diagnosed at right if YES
             smoking:
               status: Includes former as well as current smokers
           infections:
