--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -13,10 +13,10 @@ en:
         theatre_case_start_time: Theatre Case Start Time
         transplant_site: Transplant Site
         warm_ischaemic_time: Warm Ischaemic Time
+        recipient_age_at_operation: Age
   activemodel:
     attributes:
       renalware/transplants/recipient_operation_document/recipient:
-        age:
         blood_group: Blood Group
         cmv_status: CMV Status
         last_dialysis_on: Last Dialysis Date
