--- a/config/locales/renalware/age.yml
+++ b/config/locales/renalware/age.yml
@@ -1,4 +1,12 @@
 en:
+  activemodel:
+    errors:
+      models:
+        renalware/age:
+          attributes:
+            unit:
+              invalid_unit: Please enter age in amount of months
+
   enumerize:
     renalware/age:
       unit:
