--- a/config/locales/renalware/transplants/recipient_operation.yml
+++ b/config/locales/renalware/transplants/recipient_operation.yml
@@ -4,7 +4,8 @@ en:
   activerecord:
     attributes:
       renalware/transplants/recipient_operation:
-        cold_ischaemic_time: Cold Ischaemic Time
+        cold_ischaemic_time: Cold Ischaemic Time (seconds)
+        cold_ischaemic_time_formatted: Cold Ischaemic Time
         donor_kidney_removed_from_ice_at: Donor Kidney Removed From Ice At
         kidney_perfused_with_blood_at: Kidney Perfused With Blood At
         notes: Notes
@@ -12,7 +13,8 @@ en:
         performed_on: Operation Date
         theatre_case_start_time: Theatre Case Start Time
         transplant_site: Transplant Site
-        warm_ischaemic_time: Warm Ischaemic Time
+        warm_ischaemic_time: Warm Ischaemic Time (seconds)
+        warm_ischaemic_time_formatted: Warm Ischaemic Time
         recipient_age_at_operation: Age
   activemodel:
     attributes:
@@ -163,3 +165,5 @@ en:
         document:
           donor:
             born_on: Age will be computed if you provide a date
+        cold_ischaemic_time_formatted: hh:mm
+        warm_ischaemic_time_formatted: hh:mm
